TCP: 'ScopedValue' migration: enabled 'ScopedValue' again